--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        'gradient-start': '#da373d',
+                        'gradient-end': '#F00',
                     }
                 }
             }
@@ -37,8 +38,8 @@
 
 <body class="font-manrope">
     <header class="container mx-auto">
-        <div class="hero ">
-            <div class="hero-content flex-col lg:flex-row">
+        <div class="my-20">
+            <div class="flex justify-between items-center flex-col lg:flex-row">
                 <div>
                     <h1 class="text-7xl font-extrabold">
                         It's good <br>
@@ -46,10 +47,10 @@
                         The Tea House</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn btn-primary">Explore More</button>
+                    <button class="btn bg-gradient-to-r from-gradient-end to-gradient-start text-white">Explore More</button>
                 </div>
                 <div>
-                    <img src="images/banner.png" class="max-w-sm" />
+                    <img src="images/banner.png" class="" />
                     <!--Ratings Badge-->
                     <div class=" -mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
                         <i class="fa-solid fa-star text-3xl text-amber-400"></i>
@@ -67,7 +68,8 @@
         <section class="text-center my-24">
             <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
             <p class="max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum
-                available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                words which don't look even slightly believable.
             </p>
             <!--Featured Tea Card Container-->
             <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
@@ -75,76 +77,161 @@
                 <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                     <figure><img src="images/tea-1.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
-                      <h2 class="text-2xl font-bold">Milk Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
-                  </div>
-              <!--Second Card-->
-              <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                <figure><img src="images/tea-2.png" alt="Shoes" /></figure>
-                <div class="card-body justify-center">
-                  <h2 class="text-2xl font-bold">Black Tea</h2>
-                  <p>Creamer could be replaced by fresh milk</p>
                 </div>
-              </div>
+                <!--Second Card-->
+                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="images/tea-2.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                        <h2 class="text-2xl font-bold">Black Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
                 <!--Third Card-->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                     <figure><img src="images/tea-3.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
-                      <h2 class="text-2xl font-bold">Lemon Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="text-2xl font-bold">Lemon Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
-                  </div>
-                    <!--Fourth Card-->
+                </div>
+                <!--Fourth Card-->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                     <figure><img src="images/tea-4.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
-                      <h2 class="text-2xl font-bold">Green Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="text-2xl font-bold">Green Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
-                  </div>
+                </div>
             </div>
         </section>
         <!--Great Tea Fresh Tea Section-->
-        <section class="my-24 gap-12 flex flex-col lg:flex-row flex-1">
-            <div class="grid gap-8 grid-cols-1 md:grid-cols-2">
-                <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
-                <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex justify-center items-center">
-                    <img src="images/fresh-1.png " alt="">
-                </div>
-                <div class="row-span-2 bg-[#5776391A] rounded-lg px-8 py-12 flex justify-center items-center">
-                    <img src="images/fresh-2.png " alt="">
-                </div>
-                <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF00]"></div>
+        <section class="flex justify-center">
+        <div class="grid gap-8 grid-cols-1 md:grid-cols-2">
+            <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
+            <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex justify-center items-center">
+                <img src="images/fresh-1.png " alt="">
             </div>
-            <div class="space-y-5 flex-1">
+            <div class="row-span-2 bg-[#5776391A] rounded-lg px-8 py-12 flex justify-center items-center">
+                <img src="images/fresh-2.png " alt="">
+            </div>
+            <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF00]"></div>
+        </div>
+        <div class=" flex-1 pl-12 justify-center">
+            <div class="space-y-5">
                 <h3 class="text-3xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
-                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
-                <h4 class="text-xl font-extrabold">Unique Taste</h4>
-                <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
-                <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
-                <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It
+                represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                appreciated by its custoers because of good words of mouth and unique customized service orginated from
+                Taiwan.</p>
+            <h4 class="text-xl font-extrabold">Unique Taste</h4>
+            <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+            <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
+            <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
             </div>
+        </div>
         </section>
         <!--Super Clients Section-->
-        <section class="my-24 flex flex-col lg:flex-row gap-14 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24">
-            <div class="space-y-5">
-                <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h2>
-                <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-                <button class="btn btn-primary">Show All</button>
+        <section
+            class="my-24 flex flex-col lg:flex-row gap-14 rounded-xl bg-gradient-to-r from-gradient-end to-gradient-start px-16 py-24">
+            <div class="flex lg:pr-32 items-center">
+                <div class="space-y-5">
+                    <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h2>
+                    <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised words which
+                        don't look even slightly believable.</p>
+                    <button class="btn btn-primary">Show All</button>
+                </div>
             </div>
-            <div class="">
-                <!--Review-->
-                <div class="relative p-10 rounded-lg bg-white">
-                    <img class="absolute -left-5 -top-5" src="images/client.png" alt="">
-                    <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <!--Review Container-->
+            <div class="relative">
+                <!--Next Review-->
+                <div class="relative mb-16 z-10 p-10 opacity-40 rounded-lg bg-white">
+                    <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p>
                     <h4 class="font-bold mt-5">Ilham Yuda</h4>
                     <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!--Current Review-->
+                <div class="absolute z-20 p-10 top-40 lg:-left-32 lg:w-[430px] rounded-lg bg-white">
+                    <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!--Previous Review-->
+                <div class="relative  z-10 p-10 opacity-40 rounded-lg bg-white">
+                    <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="px-48 py-10 bg-base-200 text-base-content" >
+        <div class="flex justify-between my-24">
+            <img src="images/cup.png" alt="">
+            <span>Ready to get started?</span>
+            <button class="btn btn-primary">Get Started</button>
+        </div>
+        <div class="footer">
+            <nav>
+                <header class="footer-title">Services</header>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </nav>
+            <nav>
+                <header class="footer-title">Company</header>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </nav>
+            <nav>
+                <header class="footer-title">Legal</header>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </nav>
+            <form>
+                <header class="footer-title">Newsletter</header>
+                <fieldset class="form-control w-80">
+                    <label class="label">
+                        <span class="label-text">Enter your email address</span>
+                    </label>
+                    <div class="join">
+                        <input type="text" placeholder="username@site.com" class="py-4 bg-transparent border-b-2 border-black outline-none" />
+                        <button class="btn text-white top-0 right-0 rounded-full bg-gradient-to-r from-gradient-end to-gradient-start">
+                            <i class="fa-solid fa-angle-right"></i>
+                        </button>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+        <div class="mt-10 text-center">
+            <p>Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+          </div>
+    </footer>
 </body>
 
 </html>
